2010-11-26  Per Bothner  <per@bothner.com>

	* lib-test.scm: New tests for symbol constructor function.

2010-11-19  Per Bothner  <per@bothner.com>

	* lib-test.scm: Add a bunch of SRFI-41 (streams) tests.

2010-11-04  Per Bothner  <per@bothner.com>

	* module2.scm: Add define-variable to avoid warning.
	* module3.scm: Add with-compile-options to suppress warning,

	* num-test.scm: Add a test from R6RS for remainder.

2010-10-29  Per Bothner  <per@bothner.com>

	* meteor.scm (bad-region): Instead of passing in a 1-element array,
	pass and return a single int primitive.
	* meteor.scm (bad-region): Don't run the program 65 times, for the
	steady-state approximation -the test-suite runner doesn't support that.

2010-10-28  Per Bothner  <per@bothner.com>

	* meteor.scm: Replace many 2d array by flattened 1d arrays.
	(do-decrementing): New convenience macro.

	* chameneosredux.scm (Color): Use new define-enum feature.

	* classes1.scm: Make <IdClass1> and <IdClass2> explicitly static.

2010-10-27  Per Bothner  <per@bothner.com>

	* meteor.scm: Use remainder instead of modulo, since former can
	be optimized to single Java instruction.

2010-10-26  Jamison Hope  <jrh@theptrgroup.com>
	    Per Bothner  <per@bothner.com>

	* meteor.scm: New "shootout" benchmark.
	* meteor-output.txt: New expected output.
	* Makefile.am: Update as needed.

2010-10-24  Helmut Eller  <eller.helmut@gmail.com>
            Per Bothner  <per@bothner.com>

	* lib-test.scm: New tests for syntax-utils's expand function.

2010-10-23  Per Bothner  <per@bothner.com>

	* inlining.expected: Update.  Optimization of format led to
	slightly shorter methods.

2010-10-21  Per Bothner  <per@bothner.com>

	* chameneosredux.scm:  Change so that 'main' action
	is evaluated at top-level.
	* chameneosredux-output.txt: New file for expected output.
	* Makefile.am (check-chameneosredux): New rule.  Related updates.

	* Makefile.am (EXTRA_DIST): Fix typo.

2010-10-21  Jamison Hope  <jrh@theptrgroup.com>
